# oak

./: Cargo.toml
doc/oak_runtime/: struct.RuntimeConfiguration.html
doc/oak_runtime/runtime/: enum.ReadStatus.html
docs/: programming-oak.md
examples/: Cargo.toml
examples/abitest/grpc/: Cargo.toml  build.rs
examples/aggregator/backend/: Cargo.toml  build.rs
examples/aggregator/grpc/: Cargo.toml  build.rs
examples/aggregator/proto/: aggregator_init.proto
examples/authentication/client/: Cargo.toml  build.rs
examples/chat/: README.md
examples/chat/client/: chat.cc
examples/chat/proto/: chat.proto
examples/hello_world/grpc/: Cargo.toml  build.rs
examples/injection/config/: config.textproto
examples/injection/proto/: injection.proto
examples/private_set_intersection/grpc/: Cargo.toml  build.rs
examples/running_average/grpc/: Cargo.toml  build.rs
examples/translator/grpc/: Cargo.toml  build.rs
examples/trusted_information_retrieval/backend/: Cargo.toml  build.rs
experimental/: Cargo.toml
experimental/oak_async/: Cargo.toml  proposal.md
experimental/oak_async/src/: lib.rs
experimental/serde_encoding/src/: lib.rs
oak/doc/oak_runtime/: struct.GrpcConfiguration.html
oak/proto/: handle.proto
oak_abi/: Cargo.toml  build.rs
oak_derive/src/: entrypoint.rs  lib.rs
oak_io/src/: handle.rs  lib.rs  receiver.rs  sender.rs
oak_runtime/src/: config.rs  lib.rs  proxy.rs  tests.rs
oak_runtime/src/node/: invocation.rs
oak_utils/: Cargo.toml
oak_utils/src/: lib.rs
sdk/: Cargo.toml
sdk/rust/oak/: Cargo.toml  build.rs
(+43 files in other folders)
