[workspace]

[package]
name = "oak_utils"
version = "0.1.0"
authors = ["Ivan Petrov <ivanpetrov@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
maplit = "*"
prost = "*"
tempfile = "*"
quote = "*"
walkdir = "*"
prost-build = "*"
tonic-build = "*"
proc-macro2 = "*"

[patch.crates-io]
prost-build = { path = "../third_party/prost/prost-build" }
prost = { path = "../third_party/prost" }
